# android_sanity_checker

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/androidparser/: mod.rs
