[package]
name = "android_sanity_checker"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slint = "1.1.1"
num_cpus = "1.16.0"
regex = "1.9.3"
rfd = "0.11.4"
sqlite = "0.31.1"
rayon = "1.7.0"
yara = "0.21.0"
yara-sys = {version = "0.21.0", features=["vendored"]}


[build-dependencies]
#slint-build = "1.1.1"

[env]
YARA_INCLUDE_DIR = "D:\\Experimentations\\Android\\libyara\\yara\\libyara\\include"
