[package]
name = "android_sanity_checker"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slint = "1.1.1"
num_cpus = { git = "https://github.com/seanmonstar/num_cpus.git", branch = "master" } #"1.16.0"
regex = "~1.10"
rfd = { git = "https://github.com/PolyMeilex/rfd.git", branch="master" } #"0.11.4"
sqlite = { git = "https://github.com/stainless-steel/sqlite.git", branch = "main" } #"0.31.1"
rayon = { git = "https://github.com/rayon-rs/rayon.git", branch = "master" } #"1.7.0"
yara = { git = "https://github.com/Hugal31/yara-rust.git", branch = "master" }
yara-sys = { git = "https://github.com/Hugal31/yara-rust.git", branch = "master", features=["vendored"] }
infer = { git = "https://github.com/bojand/infer.git", branch = "master" }

[build-dependencies]
#slint-build = "1.1.1"

[env]
YARA_INCLUDE_DIR = "D:\\Experimentations\\Android\\libyara\\yara\\libyara\\include"
